<resources>
    <string name="app_name">AnonClass</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_firstName">Please fill the first name</string>
    <string name="error_incorrect_lastName">Please fill the last name</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirmPwd">Please have same passwords here</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_anon_class">AnonClassActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">Messages</string>
    <string name="enroll">Enroll</string>
    <string name="create">Create</string>
    <string name="register_prompt">Please fill up your info</string>
    <string name="email">Email</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="UTORid">UTORid</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_class">Create a Class</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="section">Section</string>
    <string name="location">Location</string>
    <string name="title_activity_in_class">InClassActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="room">Room</string>
    <string name="title_activity_get_location">Map</string>
    <string name="modify_password">Modify Password(Still under construction)</string>
    <string name="drop_a_course">Drop a Course (Still under construction)</string>
    <string name="logoff">Log off</string>
</resources>
