<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:text="@string/modify_password"
        android:gravity=""
        android:textSize="20sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/dividerGrey">

    </Button>

    <Button
        android:id="@+id/trans_pwd_reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity=""
        android:text="@string/drop_a_course"
        android:textSize="20sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/dividerGrey">

    </Button>
    <Button
        android:id="@+id/logoff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity=""
        android:text="@string/logoff"
        android:textSize="20sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/dividerGrey">

    </Button>

</LinearLayout>