<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnonClassActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/createClassForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/create_class"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/course_codeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:counterEnabled="true"
                app:counterMaxLength="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/course_codeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_code"
                    android:inputType="text"
                    android:maxLength="6"
                    android:ems="6" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/course_nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                android:gravity="start"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/course_nameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_name"
                    android:inputType="text"
                    android:ems="40"
                    android:maxLength="40"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sectionField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/section"
                    android:inputType="text"
                    android:maxLength="10" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/locationField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:maxLength="20" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/submit"
                android:layout_marginEnd="40dp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>
